# alembic-check

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  release.config.js
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  pr-prerelease.yml
alembic_check/: __init__.py  check_migrations.py  exceptions.py
scripts/: bump_version.sh
tests/: __init__.py  test_check_migrations.py
